--- a/style.css
+++ b/style.css
@@ -79,7 +79,10 @@ body {
 .wrapper {
   background-color: white;  
   padding: 90px 16px 16px 16px;
-  margin: 160px 24px 24px 24px;
+  margin-top: 160px;
+  margin-left: max(24px, 12vw);
+  margin-right: max(24px, 12vw);
+  margin-bottom: 24px;
   border-radius: 20px;
   display: grid;
   
@@ -155,6 +158,7 @@ details[open] > summary::after {
     display: block;
   }
   .wrapper {
+    padding-top: 16px;
     margin: 28px;
     display: grid;
     grid-template-columns: 1fr 1fr;
